Adopt more parent defaults